# usv_gazebo_plugins

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  package.xml  rosdoc.yaml
docs/: Make.wave  Make.wind  Makefile  refs.bib  theory_of_operation.tex  wind_theory.md  wind_theory.tex
include/usv_gazebo_plugins/: usv_gazebo_dynamics_plugin.h  usv_gazebo_thrust_plugin.h  usv_gazebo_wind_plugin.h
src/: usv_gazebo_dynamics_plugin.cpp  usv_gazebo_thrust_plugin.cpp  usv_gazebo_wind_plugin.cpp
test/: frame_test.cpp  ugdp_test.cpp
urdf/: usv_gazebo_dynamics_plugin.xacro  wamv_gazebo_dynamics_plugin.xacro  wamv_gazebo_thrust_plugin.xacro
